--- a/app/src/main/res/layout/agents_layout.xml
+++ b/app/src/main/res/layout/agents_layout.xml
@@ -4,9 +4,10 @@
 
     <data>
 
+
         <variable
-            name="property"
-            type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+            name="viewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
 
         <variable
             name="agent"
@@ -38,7 +39,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="textAutoComplete"
                 android:labelFor="@id/type_dropdown"
-                android:text="@{agent.name}" />
+
+                android:text="@{viewModel.agent}" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
