--- a/app/src/main/res/layout/agents_layout.xml
+++ b/app/src/main/res/layout/agents_layout.xml
@@ -39,8 +39,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="textAutoComplete"
                 android:labelFor="@id/type_dropdown"
-
-                android:text="@{viewModel.agent}" />
+                entries="@=viewModel"
+                android:text="@{viewModel.agents}" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
