- correct some bugs
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout-sw600dp/add_property_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/add_property_fragment.xml
@@ -13,9 +13,14 @@
             name="photo"
             type="com.openclassrooms.realestatemanager.domain.model.property.Media.Photo" />
 
+
         <variable
             name="viewModel"
-            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
+
+        <variable
+            name="agentViewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.agents.AgentsViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
