- correct a bug od agents_layout.xml dropdown.
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -281,6 +281,7 @@
             android:background="@color/colorAccent"
             android:baselineAlignBottom="true"
             android:contentDescription="@string/add_property_button"
+            android:onClick="@{(view) -> viewModel.saveProperty() }"
             app:backgroundTint="@color/colorAccent"
             app:layout_anchor="@id/bottomAppBar"
             app:srcCompat="@drawable/ic_check_24dp" />
