--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -8,6 +8,10 @@
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
 
+        <variable
+            name="address"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
+
         <import type="android.view.View" />
 
         <import type="com.openclassrooms.realestatemanager.utils.converter.Converter" />
@@ -43,7 +47,7 @@
                 android:maxLines="3"
                 android:minLines="2"
                 android:scrollbars="vertical"
-                android:text="@={viewModel.address.address1}"
+                android:text="@={viewModel.address1}"
                 android:textSize="@dimen/textSize"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/address2"
-                android:text="@={viewModel.address.address2}"
+                android:text="@={viewModel.address2}"
                 android:textSize="@dimen/textSize" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -99,7 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:text="@={viewModel.address.area}"
+                android:text="@={viewModel.area}"
                 android:textSize="@dimen/textSize"
                 app:endIconMode="clear_text" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -126,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:text="@={viewModel.address.city}"
+                android:text="@={viewModel.city}"
                 android:textSize="@dimen/textSize"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/area_text_input" />
@@ -157,7 +161,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPostalAddress"
-                android:text="@={viewModel.address.state}"
+                android:text="@={viewModel.state}"
                 android:textSize="@dimen/textSize" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -184,7 +188,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:text="@={viewModel.address.zipCode }"
+                android:text="@={viewModel.zipCode }"
                 android:textSize="@dimen/textSize"
                 app:layout_constraintTop_toBottomOf="@id/city_text_input" />
 
@@ -214,7 +218,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:text="@={viewModel.address.country}"
+                android:text="@={viewModel.country}"
                 android:textSize="@dimen/textSize" />
 
         </com.google.android.material.textfield.TextInputLayout>
