--- a/app/src/main/res/layout/media_layout.xml
+++ b/app/src/main/res/layout/media_layout.xml
@@ -33,7 +33,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button_photo"
             tools:layoutManager="LinearLayoutManager"
-            items="@{property.media.photos}"
+            items="@{viewModel.photos}"
             tools:listitem="@layout/media_item_content" />
 
         <Button
