--- a/app/src/main/res/layout/type_layout.xml
+++ b/app/src/main/res/layout/type_layout.xml
@@ -4,10 +4,15 @@
 
     <data>
 
+        <variable
+            name="typeList"
+            type="com.openclassrooms.realestatemanager.domain.model.property.Property.PropertyType" />
 
         <variable
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
+
+        <import type="android.R.layout" />
 
     </data>
 
@@ -35,7 +40,10 @@
                 android:labelFor="@id/type_dropdown"
                 android:layout_height="wrap_content"
                 android:inputType="textAutoComplete"
-                android:text="@={viewModel.type}" />
+                entries="@{viewModel.propertyType}"
+                itemLayout="@{layout.simple_spinner_dropdown_item}"
+                textViewId="@{@android:id/text1}"
+                value="@{viewModel.type}" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
