--- a/app/src/main/res/layout/characteristics_layout.xml
+++ b/app/src/main/res/layout/characteristics_layout.xml
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:inputType="number"
-                android:text="@={Converter.intToString(numberOfRoomLayout, viewModel.roomNumber, viewModel.roomNumber) }"
+                android:text="@={Converter.intToString(numberOfRoomTextInput, viewModel.roomNumber, viewModel.roomNumber) }"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_room_24dp"
                 app:endIconMode="clear_text" />
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:text="@={Converter.intToString(numberOfBedroomTextLayout, viewModel.bedroomNumber, viewModel.bedroomNumber) }"
+                android:text="@={Converter.intToString(numberOfBedroomTextInput, viewModel.bedroomNumber, viewModel.bedroomNumber) }"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_bedroom_parent_24dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -128,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:inputType="number"
-                android:text="@={Converter.intToString(bathroomsLayout, viewModel.bathroomNumber, viewModel.bathroomNumber) }"
+                android:text="@={Converter.intToString(numberOfBathroomTextInput, viewModel.bathroomNumber, viewModel.bathroomNumber) }"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_bathroom_24dp" />
         </com.google.android.material.textfield.TextInputLayout>
