- update AddEditPropertyViewModel.kt update argument
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/characteristics_layout.xml
+++ b/app/src/main/res/layout/characteristics_layout.xml
@@ -41,10 +41,15 @@
                 android:maxLength="4"
                 android:inputType="number"
                 android:textAlignment="center"
-                android:text="@={Converter.intToString(surfaceTextInput, viewModel.surface, viewModel.surface) }"
+                android:text="@={ viewModel.surface}"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_square_foot_24dp"
                 app:endIconMode="clear_text" />
+            />/
+            android:text="@={Converter.intToString(surfaceTextInput, viewModel.surface,
+            viewModel.surface) }"
+
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -70,7 +75,7 @@
                 android:layout_weight="0.5"
                 android:textAlignment="center"
                 android:inputType="number"
-                android:text="@={Converter.intToString(numberOfRoomTextInput, viewModel.roomNumber, viewModel.roomNumber) }"
+                android:text="@={viewModel.roomNumber }"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_room_24dp"
                 app:endIconMode="clear_text" />
@@ -101,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:textAlignment="center"
-                android:text="@={Converter.intToString(numberOfBedroomTextInput, viewModel.bedroomNumber, viewModel.bedroomNumber) }"
+                android:text="@={ viewModel.bedroomNumber }"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_bedroom_parent_24dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -132,7 +137,7 @@
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textAlignment="center"
-                android:text="@={Converter.intToString(numberOfBathroomTextInput, viewModel.bathroomNumber, viewModel.bathroomNumber) }"
+                android:text="@={viewModel.bathroomNumber }"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_bathroom_24dp" />
         </com.google.android.material.textfield.TextInputLayout>
