--- a/app/src/main/res/layout/price_layout.xml
+++ b/app/src/main/res/layout/price_layout.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:inputType="number"
-                android:text="@{viewModel.price }"
+                android:text="@={viewModel.price }"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/baseline_attach_money_24" />
         </com.google.android.material.textfield.TextInputLayout>
