--- a/app/src/main/res/layout/dates_layout.xml
+++ b/app/src/main/res/layout/dates_layout.xml
@@ -9,7 +9,6 @@
         <variable
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,7 +42,7 @@
                 android:id="@+id/sell_date_dropdown"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                dateToText="@{viewModel.soldDate}"
+                textToDate="@{viewModel.sellDate}"
                 android:hint="@string/on_market_since"
                 android:inputType="textAutoComplete"
                 android:labelFor="@id/type_input_layout" />
@@ -66,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="@{viewModel.sold}"
+            android:visibility="@{viewModel.isNewProperty() ? View.VISIBLE : View.GONE}"
             android:layout_marginStart="@dimen/marginStart"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/switch_title" />
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/sold_date"
-                dateToText="@{viewModel.soldDate}"
+                textToDate="@{viewModel.soldDate}"
                 android:inputType="textAutoComplete"
                 android:labelFor="@id/sold_input_layout" />
         </com.google.android.material.textfield.TextInputLayout>
