add agent in the autocomplete on edit
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/agents_layout.xml
+++ b/app/src/main/res/layout/agents_layout.xml
@@ -40,6 +40,7 @@
 
             <AutoCompleteTextView
                 android:id="@+id/agent_dropdown"
+                android:text="@{viewModel.agent.name}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
