--- a/app/src/main/res/menu/menu_fragment_properties.xml
+++ b/app/src/main/res/menu/menu_fragment_properties.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/ic_search_24dp"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="always|collapseActionView" />
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item
         android:icon="@drawable/ic_baseline_sort_24"
