change way to deal with appbar menu and menu item click listener
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/menu/menu_fragment_properties.xml
+++ b/app/src/main/res/menu/menu_fragment_properties.xml
@@ -25,5 +25,5 @@
         android:id="@+id/action_filter_properties"
         android:icon="@drawable/ic_baseline_filter_list_24"
         android:title="@string/filtered"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
