--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                app:menu="@menu/menu_fragment_properties"
+                app:hideOnScroll="true"
                 app:navigationIcon="@drawable/ic_menu_24dp"
                 tools:ignore="BottomAppBar" />
 
